# mekka_synth

./: Cargo.toml
src/: envelope.rs  lfo.rs  lib.rs  oscillator.rs  parameters.rs  tuning.rs  waveform.rs
